syntax = "proto3";

option java_multiple_files = true;

option java_package="com.example.grpc.streaming";


service PersonService {

    rpc fetchPerson(PersonRequest) returns (PersonResponse) {}
}

message PersonRequest{
    string id=1;
}

message PersonResponse{
    string id=1;
    string name = 2;
    int32 age = 3;

}
